<resources>
    <string name="app_name">My Application</string>
    <string name="city_name">The name of the city</string>
    <string name="city_name_demo">Ha noi</string>
    <string name="temperature">Temperature</string>
    <string name="air_quality">Air quality</string>
    <string name="air_quality_demo">107 AQI</string>
    <string name="temperature_demo">23 C</string>
    <string name="temperature_description">Sunny day and night without rain</string>
    <string name="time_demo">09:00</string>
    <string name="error_location">Unable to find your current location</string>
    <string name="c">  C</string>
    <string name="aqi">  AQI</string>
    <string name="bad">Bad air quality</string>
    <string name="dangerous">The air is very dangerous</string>
    <string name="very_bad">The air quality is very bad</string>
    <string name="normal">Good air quality</string>
    <string name="good">The air is very fresh</string>
    <string name="now">Now</string>
    <string name="hourly">Hourly</string>
    <string name="daily">Daily</string>
    <string name="history">History</string>
    <string name="temperature_feel">Temperature feel</string>
    <string name="humidity">Humidity</string>
    <string name="uv_index">Uv index</string>
    <string name="wind_speed">Wind speed</string>
    <string name="details">Details</string>
    <string name="setting">Setting</string>
    <string name="show_status_bar">Show status bar</string>
    <string name="unit_of_measure">Unit of measure</string>
    <string name="time_format">Time format</string>
    <string name="prepare_your_day">Prepare your day</string>
    <string name="theme">Theme</string>
    <string name="app_reviews">App reviews</string>
    <string name="remind_weather_watch">Remind weather watch</string>
    <string name="hours_notification">08:00</string>
    <string name="hours_day">24hour</string>
    <string name="app_weather">Weather Forecats 0.0.1</string>
    <string name="noti">Update the weather situation immediately</string>
</resources>
